--- a/frontend/index.html
+++ b/frontend/index.html
@@ -143,6 +143,10 @@
                                     </div>
                                     <span id="time-display">0:00 / 0:30</span>
                                 </div>
+                                <div class="volume-control">
+                                    <span class="volume-icon">🔊</span>
+                                    <input type="range" id="volume-slider" class="volume-slider" min="0" max="1" step="0.01" value="1">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -259,6 +263,10 @@
                                         <div id="classic-progress" class="progress"></div>
                                     </div>
                                     <span id="classic-time-display">0:00 / 0:30</span>
+                                </div>
+                                <div class="volume-control">
+                                    <span class="volume-icon">🔊</span>
+                                    <input type="range" id="classic-volume-slider" class="volume-slider" min="0" max="1" step="0.01" value="1">
                                 </div>
                             </div>
                         </div>
