fix: add missing turn modal HTML for ClassicScreen multiplayer support

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -199,6 +199,20 @@
             </div>
         </div>
 
+        <!-- Turn Modal -->
+        <div id="turn-modal" class="modal">
+            <div class="modal-content">
+                <h2>Nächster Spieler</h2>
+                <h3 id="next-player-name" class="next-player-name">Spieler Name</h3>
+                <p>Du bist dran!</p>
+                
+                <button id="start-turn-btn" class="primary-btn">
+                    <span>Zug starten</span>
+                    <span class="btn-icon">▶</span>
+                </button>
+            </div>
+        </div>
+
         <!-- Win Screen -->
         <div id="win-screen" class="screen">
             <div class="win-container">
