--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="BeatGuessr - Das ultimative Musik-Ratespiel! Teste dein Musikwissen mit über 660 Songs aus 65 Jahren Musikgeschichte.">
+    <meta name="theme-color" content="#8b5cf6">
     <title>BeatGuessr - Das Musik-Ratespiel</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
